--- a/conf/application.properties
+++ b/conf/application.properties
@@ -1,2 +1,2 @@
 #spring.data.mongodb.uri: mongodb://localhost/messageapp
-spring.data.mongodb.uri: mongodb://admin:admin@ds045704.mongolab.com:45704/messageapp
+spring.data.mongodb.uri: mongodb://admin:admin@ds145365.mlab.com:45365/dreamtechdev
