--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					 <artifactId>shrinkwrap-bom</artifactId>
+    				<groupId>org.jboss.shrinkwrap</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-data-jpa</artifactId> 
 			</dependency> -->
@@ -40,13 +46,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.jboss.shrinkwrap/shrinkwrap-bom -->
-		<dependency>
-			<groupId>org.jboss.shrinkwrap</groupId>
-			<artifactId>shrinkwrap-bom</artifactId>
-			<version>1.2.2</version>
-			<type>pom</type>
-		</dependency>
+		
 		<!-- <dependency> <groupId>mysql</groupId> <artifactId>mysql-connector-java</artifactId> 
 			<version>5.1.6</version> </dependency> -->
 
