--- a/pom.xml
+++ b/pom.xml
@@ -26,12 +26,6 @@
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
 			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					 <artifactId>shrinkwrap-bom</artifactId>
-    				<groupId>org.jboss.shrinkwrap</groupId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -43,7 +37,14 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+		<!-- https://mvnrepository.com/artifact/org.jboss.arquillian/arquillian-bom -->
+		<dependency>
+			<groupId>org.jboss.arquillian</groupId>
+			<artifactId>arquillian-bom</artifactId>
+			<version>1.1.5.Final</version>
+			<type>pom</type>
+		</dependency>
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
